# sunwellcore-world

./: .clang-format  CMakeLists.txt  LICENSE  README.md  revision_data.h.in.cmake
dep/: CMakeLists.txt
dep/easy_profiler/: CMakeLists.txt  event_trace_win.cpp
dep/fmt/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/include/G3D/: Vector3.h
dep/g3dlite/source/: debugAssert.cpp
dep/recastnavigation/Detour/: DetourNavMesh.cpp  DetourNavMesh.h  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
dep/recastnavigation/Recast/: RecastContour.cpp  RecastFilter.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp
src/common/: CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  RegularGrid.h  VMapDefinitions.h  VMapTools.h
src/common/Collision/Management/: IMMAPManager.h  IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MapDefines.h  MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/common/Configuration/: BuiltInConfig.cpp  BuiltInConfig.h  Config.cpp  Config.h
src/common/Debugging/: Errors.cpp  Errors.h  WheatyExceptionReport.cpp  WheatyExceptionReport.h
src/common/Hacks/: boost_1_73_process_windows_nopch.h
src/common/Logging/: Log.cpp  Log.h
src/common/PrecompiledHeaders/: commonPCH.h
src/common/Threading/: BackgroundWorker.cpp  BackgroundWorker.hpp  LockedQueue.h  MPSCQueue.hpp  SyncQueue.hpp
src/common/Utilities/: AsyncCallbackProcessor.h  ByteConverter.h  EventBus.h  EventMap.h  EventProcessor.cpp  EventProcessor.h  Hash.h  Optional.h  Regex.h  ServiceWin32.cpp  ServiceWin32.h  Singleton.h  StartProcess.cpp  StartProcess.h  StringFormat.h  StringValidation.cpp  StringValidation.h  TaskScheduler.cpp  TaskScheduler.h  Timer.h  UniqueFunction.hpp  Util.cpp  Util.h
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.rc  resource.h
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/PrecompiledHeaders/: authPCH.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/AntiCheat/: AnticheatMgr.cpp  AnticheatMgr.h  SunwellCheat.cpp
src/server/game/ArenaSpectator/: ArenaSpectator.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldHandler.cpp  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamMgr.cpp  ArenaTeamMgr.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h  CrossFactionBattleground.cpp
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h  ChatProcessor.cpp  ChatProcessor.hpp
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/Custom/: CustomMgr.cpp  CustomMgr.h
src/server/game/DataStores/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFG.cpp  LFG.h  LFGGroupData.cpp  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.cpp  LFGPlayerData.h  LFGQueue.cpp  LFGQueue.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Events/: CustomEventMgr.cpp  CustomEventMgr.h  GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: Grid.h  GridDefines.h  GridLoader.h  GridRefManager.h  GridReference.h  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/server/game/Guilds/: Guild.cpp  Guild.h  GuildMgr.cpp  GuildMgr.h
src/server/game/Handlers/: AddonHandler.cpp  AddonHandler.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuthHandler.cpp  BattleGroundHandler.cpp  CalendarHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  DuelHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  ItemHandler.cpp  LFGHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  MovementHandler.cpp  NPCHandler.cpp  NPCHandler.h  PetHandler.cpp  PetitionsHandler.cpp  QueryHandler.cpp  QuestHandler.cpp  ReferAFriendHandler.cpp  SkillHandler.cpp  SpellHandler.cpp  TaxiHandler.cpp  TicketHandler.cpp  TradeHandler.cpp  VehicleHandler.cpp  VoiceChatHandler.cpp
src/server/game/Instances/: InstanceSaveMgr.cpp  InstanceSaveMgr.h  InstanceScript.cpp  (+1 more)
src/server/scripts/: CMakeLists.txt
src/server/shared/: CMakeLists.txt  Containers.h  Enum.h  Profiler.h
src/server/worldserver/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  Master.h  ServerThreads.cpp  ServerThreads.h  worldcustom.conf.dist  worldserver.conf.dist  worldserver.rc
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
(+1417 files in other folders)
